# spot-it-3d

./: .gitignore  CMakeLists.txt  README.md  Vilota_Wsrt_Guide.md  cmake.sh  compile.sh  compile_cmake.sh  compile_gcc.sh  generate.sh
classifier_service/: README.md  config.json  main.py  requirements.txt
classifier_service/server/: __init__.py
classifier_service/server/routes/: predict_routes.py
classifier_service/server/services/: __init__.py  classification.py
data/log/: jsontocsv.py
eval/: create_ground_truth.py  evaluate_metrics.py  merge_ground_truth.py
include/: WSrtInterface.hpp  multi_cam_detect.hpp  multi_cam_detect_save.hpp  multi_cam_detect_utils.hpp  multi_cam_log.hpp  multi_cam_params.hpp  multi_cam_track.hpp  multi_cam_track_utils.hpp  yolo.hpp
include/srt_receiver/: SrtReceiverFactory.hpp  SrtReceiverInterface.hpp
include/websocket_client/: WebsocketClientFactory.hpp  WebsocketClientInterface.hpp
lib/: CMakeLists.txt
middleman/: README.md  main.py  middleman_test.py
scripts/: csvtomat.m  full-shutdown.sh  get_mat.m  jsontocsv.py  ssh-43ae-host.sh  ssh-43ae-shutdown.sh  ssh-43ae.sh  ssh-9b9d-host.sh  ssh-9b9d-shutdown.sh  ssh-9b9d.sh
src/: WSrtInterface.cpp  multi_cam.cpp  multi_cam_detect.cpp  multi_cam_detect_utils.cpp  multi_cam_log.cpp  multi_cam_track.cpp  multi_cam_track_utils.cpp  yolo.cpp
